--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "require": {
     "php": ">=7.1.3",
-    "firebase/php-jwt": "^5.0"
+    "firebase/php-jwt": "^5.0",
+    "guzzlehttp/guzzle": "~6.0"
   },
   "autoload": {
     "classmap": [
