--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "php": ">=7.1.3",
     "firebase/php-jwt": "^5.0",
-    "guzzlehttp/guzzle": "~6.0"
+    "guzzlehttp/guzzle": "~6.0",
+    "codercat/jwk-to-pem": "^0.0.2"
   },
   "autoload": {
     "classmap": [
